--- a/wajibisha/static/css/wajibisha.scss
+++ b/wajibisha/static/css/wajibisha.scss
@@ -61,8 +61,6 @@ body {
 }
 
 .clipped-header {
-  /*-webkit-clip-path: polygon(0 0, 100% 0, 100% 46%, 0% 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 46%, 0% 100%);*/
   background-color: $color-blue;
   height: 280px;
   color: white;
@@ -93,6 +91,32 @@ body {
   }
 
 }
+.promises-header {
+  background-color: #0067a3;
+  height: 280px;
+  color: white;
+  text-align: center;
+  padding-top: 50px;
+  position: relative;
+  z-index: 100;
+  transform-origin: -40px;
+  transform: skewY(-6deg);
+  box-shadow: 0 4px 2px -2px #b7b7b7; }
+.promises-header .wrapper {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 103;
+  transform: skewY(6deg);
+  transform-origin: 0; }
+.promises-header .wrapper .presentation-img {
+  z-index: 1003;
+  height: 200px;
+  position: absolute;
+  right: 0; }
+
 .showcase h4 {
   color:#0067a3;
 }
@@ -134,6 +158,12 @@ body {
   margin: 2rem;
   border-color: #B7E4FF;
   padding: 0;
+}
+
+.team {
+  padding:0;
+  margin:3rem;
+  height:230px;
 }
 
 .input-group-btn {
