--- a/wajibisha/templates/blocks/team.html
+++ b/wajibisha/templates/blocks/team.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
-<div class="showcase how-it-works text-center" style="height:;width:100%;">
+<div class="showcase how-it-works text-center" style="width:100%;">
   <div class="wrapper clearfix text-center">
-   <h3 style="color:#0067A3;">THE TEAM</h3>
+   <h4>THE TEAM</h4>
    <!--start a first card group-->
   <div class='pt-0 card-group'>
     <div class="team card text-center">
