--- a/hurumap_ng/templates/profile/profile_detail.html
+++ b/hurumap_ng/templates/profile/profile_detail.html
@@ -367,69 +367,6 @@
           </div>
       </section>
       {% endif %}
-      <!-- {% if not nbs_2018.mineral_production.is_missing %}
-      <section class="clearfix stat-row">
-        <div class="column-full">
-            <div id="chart-column-nbs_2018-mineral_production"
-                 data-chart-title="Mineral Production 2016 - 2018"
-                 data-stat-type="number"
-                 data-source-title="National Bureau of Statistics, 2018"
-                 data-source-link="https://nigerianstat.gov.ng/download/614"></div>
-          </div>
-      </section>
-      {% endif %}
-      {% if not nbs_2018.mobile_subscription.is_missing %}
-      <section class="clearfix stat-row">
-        <div class="column-full">
-            <div id="chart-grouped_column-nbs_2018-mobile_subscription"
-                 data-chart-title="Telecoms Subscriptions by Mobile GSM and State Q4 2018"
-                 data-stat-type="number"
-                 data-source-title="National Bureau of Statistics, 2018"
-                 data-source-link="https://nigerianstat.gov.ng/download/614"></div>
-          </div>
-      </section>
-      {% endif %}
-      {% if not nbs_2018.debt_data.is_missing %}
-      <section class="clearfix stat-row">
-        <div class="column-full">
-          <div id="chart-grouped_column-nbs_2018-debt_data"
-               data-chart-title="External and Domestic Debt 2011 - June 2018 in ₦" data-stat-type="number"></div>
-            </div>
-        </section>
-      {% endif %}
-      {% if not nbs_2018.faac.is_missing %}
-      <section class="clearfix stat-row">
-        <div class="column-full">
-            <div id="chart-column-nbs_2018-faac"
-                 data-chart-title="Federation Account Allocation Committee (FAAC) Allocation for January 2019 in Million ₦"
-                 data-stat-type="number"
-                 data-source-title="National Bureau of Statistics, 2019"
-                 data-source-link="https://nigerianstat.gov.ng/download/614"></div>
-          </div>
-      </section>
-      {% endif %}
-      {% if not nbs_2018.telecom_subscription.is_missing %}
-      <section class="clearfix stat-row">
-        <div class="column-full">
-            <div id="chart-grouped_column-nbs_2018-telecom_subscription"
-                 data-chart-title="Telecoms Subscriptions 2018"
-                 data-stat-type="number"
-                 data-source-title="National Bureau of Statistics, 2018"
-                 data-source-link="https://nigerianstat.gov.ng/download/614"></div>
-          </div>
-      </section>
-      {% endif %}
-      {% if not nbs_2018.jamb.is_missing %}
-      <section class="clearfix stat-row">
-        <div class="column-full">
-            <div id="chart-grouped_column-nbs_2018-jamb"
-                 data-chart-title="Telecoms Subscriptions 2018"
-                 data-stat-type="number"
-                 data-source-title="National Bureau of Statistics, 2018"
-                 data-source-link="https://nigerianstat.gov.ng/download/614"></div>
-          </div>
-      </section>
-      {% endif %} -->
     </div>
   </article>
   {% endif %}
@@ -557,6 +494,25 @@
               {% endif %}
         </section>
         {% endif %}
+        {% if not finance.debt_data.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+            <div id="chart-grouped_column-finance-debt_data"
+                 data-chart-title="External and Domestic Debt 2011 - June 2018 in ₦" data-stat-type="number"></div>
+              </div>
+          </section>
+        {% endif %}
+        {% if not finance.faac.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-column-finance-faac"
+                   data-chart-title="Federation Account Allocation Committee (FAAC) Allocation for January 2019 in Million ₦"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2019"
+                   data-source-link="https://nigerianstat.gov.ng/download/614"></div>
+            </div>
+        </section>
+        {% endif %}
       </div>
     </article>
   {% endif %}
@@ -564,7 +520,51 @@
     <article id="transportation" class="clearfix">
       <header class="section-contents"><h1>Others</h1></header>
       <div class="section-container">
-        {% if not false %}
+        {% if not others.mineral_production.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-column-others-mineral_production"
+                   data-chart-title="Mineral Production 2016 - 2018"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2018"
+                   data-source-link="https://nigerianstat.gov.ng/download/614"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not others.mobile_subscription.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-grouped_column-others-mobile_subscription"
+                   data-chart-title="Telecoms Subscriptions by Mobile GSM and State Q4 2018"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2018"
+                   data-source-link="https://nigerianstat.gov.ng/download/614"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not others.telecom_subscription.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-grouped_column-others-telecom_subscription"
+                   data-chart-title="Telecoms Subscriptions 2018"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2018"
+                   data-source-link="https://nigerianstat.gov.ng/download/614"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not others.jamb.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-grouped_column-others-jamb"
+                   data-chart-title="Telecoms Subscriptions 2018"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2018"
+                   data-source-link="https://nigerianstat.gov.ng/download/614"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not others.driver_licences_processed %}
         <section class="clearfix stat-row">
           <div class="column-full">
               <div id="chart-column-others-driver_licences_processed"
